[tool.poetry]
name = "within"
version = "0.1.0"
description = ""
authors = ["Milan Dean <milan387@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
osmnx = "^2.0.1"
torch = "2.0.0"
transformers = "^4.48.2"
pydantic = "^2.10.6"
black = "^25.1.0"
scipy = "^1.15.1"
sentencepiece = "^0.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
